--- a/example/storybook/tsconfig.json
+++ b/example/storybook/tsconfig.json
@@ -3,11 +3,11 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@gluestack/ui-styled": ["../../packages/dank-style/src"],
-      // "@gluestack/design-system": [
+      "@dank-style/react": ["../../packages/react/src"],
+      // "@dank-style/design-system": [
       //   "../../../../glustack-design-system/src/index"
       // ],
-      "@gluestack/color-mode": ["../../packages/color-mode/src/index"]
+      "@dank-style/color-mode": ["../../packages/color-mode/src/index"]
     },
     "emitDeclarationOnly": true,
     "noEmit": false,
