--- a/packages/color-mode/example/native/tsconfig.json
+++ b/packages/color-mode/example/native/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "paths": {
-      "@gluestack/ui-styled": ["../../src"]
+      "@dank-style/react": ["../../src"]
     },
     "emitDeclarationOnly": true,
     "noEmit": false,
