--- a/packages/config/example/native/package.json
+++ b/packages/config/example/native/package.json
@@ -23,8 +23,8 @@
     "typescript": "^4.6.3"
   },
   "peerDependencies": {
-    "@gluestack/ui-creator": "*",
-    "@gluestack/ui": "*",
+    "@dank-style/ui-creator": "*",
+    "@dank-style/ui": "*",
     "react": "*",
     "react-dom": "*",
     "react-native": "*",
