--- a/packages/config/tsconfig.json
+++ b/packages/config/tsconfig.json
@@ -2,8 +2,8 @@
   "include": ["./src"],
   "exclude": ["node_modules", "example"],
   "path": {
-    "@gluestack/ui-styled": ["../styled/src"],
-    "@gluestack/ui-convert-utility-to-sx": ["../ui-convert-utility-to-sx/src"]
+    "@dank-style/react": ["../styled/src"],
+    "@dank-style/ui-convert-utility-to-sx": ["../ui-convert-utility-to-sx/src"]
   },
   "compilerOptions": {
     "emitDeclarationOnly": true,
