--- a/packages/css-injector/package.json
+++ b/packages/css-injector/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@gluestack/css-injector",
+  "name": "@dank-style/css-injector",
   "version": "0.0.1",
   "main": "lib/commonjs/index",
   "types": "lib/typescript/index.d.ts",
