--- a/packages/media-query/package.json
+++ b/packages/media-query/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@gluestack/media-query",
+  "name": "@dank-style/media-query",
   "version": "0.0.1",
   "main": "lib/commonjs/index",
   "types": "lib/typescript/index.d.ts",
