--- a/packages/ui-convert-utility-to-sx/example/native/package.json
+++ b/packages/ui-convert-utility-to-sx/example/native/package.json
@@ -27,7 +27,7 @@
     "typescript": "^4.6.3"
   },
   "peerDependencies": {
-    "@gluestack/ui": "*"
+    "@dank-style/ui": "*"
   },
   "private": true
 }
