--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dank-style/react",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "main": "lib/commonjs/index",
   "types": "lib/typescript/index.d.ts",
   "module": "lib/module/index",
@@ -16,10 +16,10 @@
   },
   "devDependencies": {
     "@dank-style/config": "*",
+    "@dank-style/convert-utility-to-sx": "*",
     "@dank-style/css-injector": "*",
     "@dank-style/cssify": "*",
     "@dank-style/media-query": "*",
-    "@dank-style/convert-utility-to-sx": "*",
     "@types/lodash.merge": "^4.6.7",
     "@types/react": "^18.0.22",
     "@types/react-native": "^0.69.15",
@@ -34,14 +34,14 @@
   },
   "dependencies": {
     "@dank-style/convert-utility-to-sx": "*",
-    "lodash.merge": "^4.6.2",
-    "@dank-style/cssify": "*"
+    "@dank-style/cssify": "*",
+    "lodash.merge": "^4.6.2"
   },
   "peerDependencies": {
     "@dank-style/config": "*",
+    "@dank-style/convert-utility-to-sx": "*",
     "@dank-style/css-injector": "*",
     "@dank-style/media-query": "*",
-    "@dank-style/convert-utility-to-sx": "*",
     "react": "*",
     "react-dom": "*",
     "react-native": "*",
