--- a/packages/react-native-aria/tsconfig.json
+++ b/packages/react-native-aria/tsconfig.json
@@ -1,16 +1,10 @@
 {
-  "extends": "expo/tsconfig.base",
+  "include": ["./src"],
+  "exclude": ["node_modules", "example"],
   "compilerOptions": {
-    "baseUrl": ".",
-    "paths": {
-      "@universa11y/button": ["../../packages/button/src"],
-      // "@gluestack/popper": ["../popper/src/index"],
-      // "@gluestack/ui": ["../ui/src/index"],
-      // "@gluestack/ui-lucide-icons": ["../ui/lucide-icons/src/"],
-      "@gluestack/ui": ["../../packages/button/src"]
-    },
     "emitDeclarationOnly": true,
     "noEmit": false,
+    "baseUrl": ".",
     "declaration": true,
     "allowUnreachableCode": false,
     "allowUnusedLabels": true,
@@ -31,6 +25,5 @@
     "skipLibCheck": true,
     "strict": true,
     "target": "esnext"
-  },
-  "exclude": ["lib", "node_modules", "storybookDocsComponents"]
+  }
 }
