--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -15,12 +15,6 @@
     "dev:web": "cd example/native && yarn web --clear"
   },
   "devDependencies": {
-    "@dank-style/color-mode": "*",
-    "@dank-style/config": "*",
-    "@dank-style/convert-utility-to-sx": "*",
-    "@dank-style/css-injector": "*",
-    "@dank-style/cssify": "*",
-    "@dank-style/media-query": "*",
     "@types/lodash.merge": "^4.6.7",
     "@types/react": "^18.0.22",
     "@types/react-native": "^0.69.15",
@@ -34,15 +28,20 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
-    "@dank-style/convert-utility-to-sx": "*",
     "lodash.merge": "^4.6.2",
-    "@dank-style/cssify": "*",
-    "@dank-style/color-mode": "*"
-  },
-  "peerDependencies": {
-    "@dank-style/config": "*",
     "@dank-style/convert-utility-to-sx": "*",
     "@dank-style/css-injector": "*",
+    "@dank-style/cssify": "*",
+    "@dank-style/color-mode": "*",
+    "@dank-style/config": "*",
+    "@dank-style/media-query": "*"
+  },
+  "peerDependencies": {
+    "@dank-style/convert-utility-to-sx": "*",
+    "@dank-style/css-injector": "*",
+    "@dank-style/cssify": "*",
+    "@dank-style/color-mode": "*",
+    "@dank-style/config": "*",
     "@dank-style/media-query": "*",
     "react": "*",
     "react-dom": "*",
