--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dank-style/react",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "main": "lib/commonjs/index",
   "types": "lib/typescript/index.d.ts",
   "module": "lib/module/index",
@@ -28,20 +28,20 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
-    "lodash.merge": "^4.6.2",
+    "@dank-style/color-mode": "*",
+    "@dank-style/config": "*",
     "@dank-style/convert-utility-to-sx": "*",
     "@dank-style/css-injector": "*",
     "@dank-style/cssify": "*",
-    "@dank-style/color-mode": "*",
-    "@dank-style/config": "*",
-    "@dank-style/media-query": "*"
+    "@dank-style/media-query": "*",
+    "lodash.merge": "^4.6.2"
   },
   "peerDependencies": {
+    "@dank-style/color-mode": "*",
+    "@dank-style/config": "*",
     "@dank-style/convert-utility-to-sx": "*",
     "@dank-style/css-injector": "*",
     "@dank-style/cssify": "*",
-    "@dank-style/color-mode": "*",
-    "@dank-style/config": "*",
     "@dank-style/media-query": "*",
     "react": "*",
     "react-dom": "*",
