--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dank-style/config",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "main": "lib/commonjs/index",
   "types": "lib/typescript/index.d.ts",
   "module": "lib/module/index",
@@ -27,8 +27,8 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
-    "lodash.merge": "^4.6.2",
-    "@dank-style/convert-utility-to-sx": "*"
+    "@dank-style/convert-utility-to-sx": "*",
+    "lodash.merge": "^4.6.2"
   },
   "peerDependencies": {
     "react": "*",
