--- a/example/babel-plugin-styled-resolver-expo/package.json
+++ b/example/babel-plugin-styled-resolver-expo/package.json
@@ -6,10 +6,12 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "build:web": "expo export:web"
   },
   "dependencies": {
     "@dank-style/react": "*",
+    "@dank-style/cssify": "*",
     "expo": "~47.0.8",
     "expo-status-bar": "~1.4.2",
     "find-yarn-workspace-root": "^2.0.0"
