--- a/example/next/package.json
+++ b/example/next/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "export": "next export"
   },
   "dependencies": {
     "@expo/html-elements": "^0.2.2",
@@ -22,7 +23,9 @@
     "react-native-vector-icons": "^9.1.0",
     "react-native-vector-icons-for-web": "^0.1.7",
     "react-native-web-linear-gradient": "^1.1.2",
-    "@dank-style/react": "*"
+    "@dank-style/react": "*",
+    "@dank-style/cssify": "*",
+    "@dank-style/babel-plugin-styled-resolver": "*"
   },
   "devDependencies": {
     "@babel/core": "7",
