--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -15,7 +15,6 @@
     "dev:web": "cd example/native && yarn web --clear"
   },
   "devDependencies": {
-    "@types/lodash.merge": "^4.6.7",
     "@types/react": "^18.0.22",
     "@types/react-native": "^0.69.15",
     "babel-plugin-transform-remove-console": "^6.9.4",
@@ -29,16 +28,13 @@
   },
   "dependencies": {
     "@dank-style/color-mode": "*",
-    "@dank-style/config": "*",
     "@dank-style/convert-utility-to-sx": "*",
     "@dank-style/css-injector": "*",
     "@dank-style/cssify": "*",
-    "@dank-style/media-query": "*",
-    "lodash.merge": "^4.6.2"
+    "@dank-style/media-query": "*"
   },
   "peerDependencies": {
     "@dank-style/color-mode": "*",
-    "@dank-style/config": "*",
     "@dank-style/convert-utility-to-sx": "*",
     "@dank-style/css-injector": "*",
     "@dank-style/cssify": "*",
