--- a/packages/alert-dialog/tsconfig.json
+++ b/packages/alert-dialog/tsconfig.json
@@ -8,7 +8,8 @@
       "@universa11y/utils": ["../utils/src"],
       "universa11y/icon": ["../icon/src"],
       "@universa11y/transitions": ["../transitions/src"],
-      "@universa11y/overlay": ["../overlay/src"]
+      "@universa11y/overlay": ["../overlay/src"],
+      "@universa11y/hooks": ["../hooks/src"]
     },
     "emitDeclarationOnly": true,
     "noEmit": false,
