fix: stories added

--- a/example/storybook/package.json
+++ b/example/storybook/package.json
@@ -38,7 +38,12 @@
     "@universa11y/button": "*",
     "@universa11y/overlay": "*",
     "@universa11y/react-native-aria": "*",
-    "@universa11y/transitions": "*"
+    "@universa11y/transitions": "*",
+    "@universa11y/vstack": "*",
+    "@universa11y/provider": "*",
+    "@universa11y/input": "*",
+    "@universa11y/switch": "*",
+    "@universa11y/radio": "*"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
