--- a/example/storybook/tsconfig.json
+++ b/example/storybook/tsconfig.json
@@ -8,6 +8,10 @@
       "@universa11y/avatar": ["../../packages/avatar/src"],
       "@universa11y/box": ["../../packages/box/src"],
       "@universa11y/center": ["../../packages/center/src"],
+      "@universa11y/checkbox": ["../../packages/checkbox/src"],
+      "@universa11y/divider": ["../../packages/divider/src"],
+      "@universa11y/heading": ["../../packages/heading/src"],
+      "@universa11y/hstack": ["../../packages/hstack/src"],
       // "@gluestack/popper": ["../popper/src/index"],
       // "@gluestack/ui": ["../ui/src/index"],
       // "@gluestack/ui-lucide-icons": ["../ui/lucide-icons/src/"],
