--- a/example/storybook/package.json
+++ b/example/storybook/package.json
@@ -24,28 +24,29 @@
   "dependencies": {
     "@dank-style/color-mode": "^0.1.0",
     "@dank-style/css-injector": "^0.1.0",
+    "@dank-style/react": "^0.1.12",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/datetimepicker": "6.5.2",
     "@react-native-community/slider": "4.2.4",
+    "@universa11y/actionsheet": "*",
+    "@universa11y/avatar": "*",
+    "@universa11y/button": "*",
+    "@universa11y/input": "*",
+    "@universa11y/overlay": "*",
+    "@universa11y/provider": "*",
+    "@universa11y/radio": "*",
+    "@universa11y/react-native-aria": "*",
+    "@universa11y/spinner": "*",
+    "@universa11y/switch": "*",
+    "@universa11y/transitions": "*",
+    "@universa11y/vstack": "*",
     "expo": "^47.0.0",
     "expo-linear-gradient": "~12.0.1",
     "expo-status-bar": "~1.4.2",
     "prism-react-renderer": "^1.3.5",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-svg": "^13.6.0",
-    "uuidv4": "^6.2.13",
-    "@universa11y/actionsheet": "*",
-    "@universa11y/button": "*",
-    "@universa11y/avatar": "*",
-    "@universa11y/overlay": "*",
-    "@universa11y/react-native-aria": "*",
-    "@universa11y/transitions": "*",
-    "@universa11y/vstack": "*",
-    "@universa11y/provider": "*",
-    "@universa11y/input": "*",
-    "@universa11y/switch": "*",
-    "@universa11y/radio": "*",
-    "@universa11y/spinner": "*"
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
