--- a/example/storybook/tsconfig.json
+++ b/example/storybook/tsconfig.json
@@ -28,7 +28,8 @@
       "@universa11y/icon": ["../../packages/icon/src"],
       "@universa11y/spinner": ["../../packages/spinner/src"],
       "@universa11y/slider": ["../../packages/slider/src"],
-      "@universa11y/image": ["../../packages/image/src"]
+      "@universa11y/image": ["../../packages/image/src"],
+      "@universa11y/link": ["../../packages/link/src"]
     },
     "emitDeclarationOnly": true,
     "noEmit": false,
