--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,12 +6,12 @@ name: Run Tests and Check for build
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   # push:
-  #   branches: [ "main" ]
+  #   branches: ['master']
   pull_request:
-    branches: ['master']
+    branches: ['main']
 
   # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+  # workflow_dispatch:
 
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
