fix: stories added

--- a/example/storybook/tsconfig.json
+++ b/example/storybook/tsconfig.json
@@ -29,7 +29,11 @@
       "@universa11y/spinner": ["../../packages/spinner/src"],
       "@universa11y/slider": ["../../packages/slider/src"],
       "@universa11y/progress": ["../../packages/progress/src"],
-      "@universa11y/menu": ["../../packages/menu/src"]
+      "@universa11y/menu": ["../../packages/menu/src"],
+      "@universa11y/select": ["../../packages/select/src"],
+      "@universa11y/modal": ["../../packages/modal/src"],
+      "@universa11y/fab": ["../../packages/fab/src"],
+      "@universa11y/alert-dialog": ["../../packages/alert-dialog/src"]
     },
     "emitDeclarationOnly": true,
     "noEmit": false,
