--- a/example/storybook/tsconfig.json
+++ b/example/storybook/tsconfig.json
@@ -34,7 +34,8 @@
       "@universa11y/menu": ["../../packages/menu/src"],
       "@universa11y/text": ["../../packages/text/src"],
       "@universa11y/linear-gradient": ["../../packages/linear-gradient/src"],
-      "@universa11y/icon": ["../../packages/icon/src"]
+      "@universa11y/icon": ["../../packages/icon/src"],
+      "@universa11y/form-control": ["../../packages/form-control/src"]
     },
     "emitDeclarationOnly": true,
     "noEmit": false,
