--- a/actionsheet/tsconfig.json
+++ b/actionsheet/tsconfig.json
@@ -8,7 +8,8 @@
       "@universa11y/utils": ["../utils/src"],
       "@universa11y/transitions": ["../transitions/src"],
       "@universa11y/hooks": ["../hooks/src"],
-      "@univera11y/modal": ["../modal/src"]
+      "@univera11y/modal": ["../modal/src"],
+      "@universa11y/overlay": ["../overlay/src"]
     },
     "emitDeclarationOnly": true,
     "noEmit": false,
