--- a/packages/color-mode/package.json
+++ b/packages/color-mode/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dank-style/color-mode",
-  "version": "0.1.4",
+  "version": "0.1.3",
   "main": "lib/commonjs/index",
   "types": "lib/typescript/index.d.ts",
   "module": "lib/module/index",
@@ -9,7 +9,7 @@
   "typings": "lib/typescript/index.d.ts",
   "scripts": {
     "prepare": "bob build",
-    "release": "echo 1",
+    "release": "release-it",
     "build": "bob build",
     "clean": "rm -rf lib"
   },
