--- a/packages/babel-plugin-styled-resolver/package.json
+++ b/packages/babel-plugin-styled-resolver/package.json
@@ -6,6 +6,7 @@
   "react-native": "src/index",
   "source": "src/index",
   "scripts": {
+    "prepare": "yarn build",
     "build": "babel src/index.js -d lib",
     "dev": "babel src/index.js -d lib",
     "clean": "rm -rf lib",
