--- a/example/storybook/package.json
+++ b/example/storybook/package.json
@@ -37,6 +37,8 @@
   "devDependencies": {
     "@babel/core": "^7.19.3",
     "@dank-style/react": "*",
+    "@dank-style/color-mode": "*",
+    "@dank-style/css-injector": "*",
     "@storybook/addon-actions": "^6.5.14",
     "@storybook/addon-controls": "^6.5.14",
     "@storybook/addon-docs": "^6.5.15",
