--- a/example/storybook/package.json
+++ b/example/storybook/package.json
@@ -50,6 +50,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
+    "@babel/generator": "^7.20.7",
+    "@babel/parser": "^7.20.13",
+    "@babel/preset-typescript": "^7.18.6",
+    "@babel/traverse": "^7.20.13",
+    "@babel/types": "^7.20.7",
     "@dank-style/react": "*",
     "@gluestack/popper": "*",
     "@storybook/addon-actions": "^6.5.14",
