--- a/example/storybook/package.json
+++ b/example/storybook/package.json
@@ -24,7 +24,7 @@
   "dependencies": {
     "@dank-style/color-mode": "^0.1.0",
     "@dank-style/css-injector": "^0.1.0",
-    "@dank-style/react": "^0.1.16",
+    "@dank-style/react": "0.1.20",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/datetimepicker": "6.5.2",
     "@react-native-community/slider": "4.2.4",
@@ -44,6 +44,7 @@
     "expo-linear-gradient": "~12.0.1",
     "expo-status-bar": "~1.4.2",
     "prism-react-renderer": "^1.3.5",
+    "react": "^18.2.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-svg": "^13.6.0",
     "uuidv4": "^6.2.13"
@@ -70,7 +71,7 @@
     "@storybook/client-api": "^6.5.15",
     "@storybook/react": "^6.5.14",
     "@storybook/react-native": "next",
-    "@types/react": "~18.0.24",
+    "@types/react": "^18.0.27",
     "@types/react-native": "~0.70.6",
     "babel-loader": "^8.2.3",
     "babel-plugin-react-docgen-typescript": "^1.5.1",
