--- a/packages/Button/package.json
+++ b/packages/Button/package.json
@@ -25,7 +25,8 @@
     "react-native-builder-bob": "^0.20.1",
     "react-native-web": "^0.18.1",
     "tsconfig": "*",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "@universa11y/utils": "*"
   },
   "dependencies": {
     "@react-native-aria/focus": "^0.2.7",
