--- a/popover/package.json
+++ b/popover/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@universa11y/popover",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
   "types": "lib/typescript/index.d.ts",
@@ -30,6 +30,7 @@
   "dependencies": {
     "@react-native-aria/focus": "^0.2.7",
     "@universa11y/hooks": "*",
+    "@universa11y/overlay": "*",
     "@universa11y/react-native-aria": "*",
     "@universa11y/transitions": "*",
     "@universa11y/utils": "*",
