--- a/packages/popover/tsconfig.json
+++ b/packages/popover/tsconfig.json
@@ -5,7 +5,8 @@
     "@universa11y/react-native-aria": ["../react-native-aria/src"],
     "@universa11y/utils": ["../utils/src"],
     "@universa11y/hooks": ["../hooks/src"],
-    "@universa11y/transitions": ["../transitions/src"]
+    "@universa11y/transitions": ["../transitions/src"],
+    "@universa11y/overlay": ["../overlay/src"]
   },
   "compilerOptions": {
     "emitDeclarationOnly": true,
