--- a/provider/tsconfig.json
+++ b/provider/tsconfig.json
@@ -4,7 +4,8 @@
   "paths": {
     "@universa11y/react-native-aria": ["../react-native-aria/src"],
     "@universa11y/utils": ["../utils/src"],
-    "@universa11y/toast": ["../toast/src"]
+    "@universa11y/toast": ["../toast/src"],
+    "@universa11y/overlay": ["../overlay/src"]
   },
   "compilerOptions": {
     "emitDeclarationOnly": true,
