--- a/example/storybook/package.json
+++ b/example/storybook/package.json
@@ -19,6 +19,7 @@
     "create-story": "node ./scripts/create-story.js"
   },
   "dependencies": {
+    "@dank-style/react": "^0.1.21",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/datetimepicker": "6.5.2",
     "@react-native-community/slider": "4.2.4",
