--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "ts-node": "^10.9.1",
     "tsc-files": "^1.1.3",
     "turbo": "latest",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "@dank-style/react": "0.1.24"
   },
   "packageManager": "yarn@1.22.17"
 }
