--- a/textarea/package.json
+++ b/textarea/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@universa11y/textarea",
-  "version": "0.1.1",
+  "version": "0.1.5",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
   "types": "lib/typescript/index.d.ts",
@@ -29,8 +29,8 @@
   },
   "dependencies": {
     "@react-native-aria/focus": "^0.2.7",
-    "react-native-svg": "^13.6.0",
-    "@universa11y/form-control": "*"
+    "@universa11y/form-control": "*",
+    "react-native-svg": "^13.6.0"
   },
   "peerDependencies": {
     "react": "*",
