--- a/pressable/package.json
+++ b/pressable/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@universa11y/pressable",
-  "version": "0.1.1",
+  "version": "0.1.5",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
   "types": "lib/typescript/index.d.ts",
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@types/react": "^18.0.22",
     "@types/react-native": "^0.69.15",
+    "@universa11y/utils": "*",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "react": "^18.1.0",
     "react-dom": "18.1.0",
@@ -25,8 +26,7 @@
     "react-native-builder-bob": "^0.20.1",
     "react-native-web": "^0.18.1",
     "tsconfig": "*",
-    "typescript": "^4.7.4",
-    "@universa11y/utils": "*"
+    "typescript": "^4.7.4"
   },
   "dependencies": {
     "@react-native-aria/focus": "^0.2.7",
