--- a/example/storybook/package.json
+++ b/example/storybook/package.json
@@ -33,6 +33,7 @@
     "prompts": "^2.4.2",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-svg": "13.4.0",
+    "typescript": "4.9.4",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
@@ -59,7 +60,7 @@
     "find-yarn-workspace-root": "^2.0.0",
     "react-native-builder-bob": "^0.20.3",
     "storybook-dark-mode": "^2.0.4",
-    "typescript": "4.2.2"
+    "typescript": "4.9.4"
   },
   "peerDependencies": {
     "@dank-style/react": "*",
