--- a/example/storybook/package.json
+++ b/example/storybook/package.json
@@ -24,7 +24,8 @@
   "dependencies": {
     "@dank-style/color-mode": "^0.1.0",
     "@dank-style/css-injector": "^0.1.0",
-    "@dank-style/react": "0.1.20",
+    "@dank-style/react": "0.1.31",
+    "@floating-ui/react": "^0.19.0",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/datetimepicker": "6.5.2",
     "@react-native-community/slider": "4.2.4",
