--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@changesets/cli": "^2.25.2",
     "@commitlint/config-conventional": "^17.3.0",
+    "@dank-style/react": "0.1.24",
     "@react-native-community/eslint-config": "^3.2.0",
     "commitlint": "^17.3.0",
     "eslint": "^8.29.0",
@@ -28,8 +29,7 @@
     "ts-node": "^10.9.1",
     "tsc-files": "^1.1.3",
     "turbo": "latest",
-    "typescript": "^4.9.4",
-    "@dank-style/react": "0.1.24"
+    "typescript": "^4.9.4"
   },
   "packageManager": "yarn@1.22.17"
 }
