fix: floating ui components

--- a/packages/popover/tsconfig.json
+++ b/packages/popover/tsconfig.json
@@ -6,7 +6,8 @@
     "@universa11y/utils": ["../utils/src"],
     "@universa11y/hooks": ["../hooks/src"],
     "@universa11y/transitions": ["../transitions/src"],
-    "@universa11y/overlay": ["../overlay/src"]
+    "@universa11y/overlay": ["../overlay/src"],
+    "@universa11y/floating-ui": ["../floating-ui/src"]
   },
   "compilerOptions": {
     "emitDeclarationOnly": true,
