--- a/packages/floating-ui/package.json
+++ b/packages/floating-ui/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@universa11y/menu",
-  "version": "0.1.6",
+  "name": "@universa11y/floating-ui",
+  "version": "0.1.0",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
   "types": "lib/typescript/index.d.ts",
@@ -28,13 +28,8 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
-    "@universa11y/floating-ui": "*",
-    "@react-native-aria/focus": "^0.2.7",
-    "@universa11y/overlay": "*",
-    "@universa11y/react-native-aria": "*",
-    "@universa11y/transitions": "*",
-    "@universa11y/utils": "*",
-    "react-native-svg": "^13.6.0"
+    "@floating-ui/react": "0.19.0",
+    "@floating-ui/react-native": "^0.9.0"
   },
   "peerDependencies": {
     "react": "*",
