--- a/packages/tooltip/package.json
+++ b/packages/tooltip/package.json
@@ -28,7 +28,7 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
-    "@floating-ui/react": "^0.19.0",
+    "@universa11y/floating-ui": "*",
     "@react-native-aria/focus": "^0.2.7",
     "@universa11y/hooks": "*",
     "@universa11y/overlay": "*",
