--- a/packages/tooltip/tsconfig.json
+++ b/packages/tooltip/tsconfig.json
@@ -5,7 +5,8 @@
     "@universa11y/react-native-aria": ["../react-native-aria/src"],
     "@universa11y/utils": ["../utils/src"],
     "@universa11y/transitions": ["../transitions/src"],
-    "@universa11y/hooks": ["../hooks/src"]
+    "@universa11y/hooks": ["../hooks/src"],
+    "@universa11y/floating-ui": ["../floating-ui/src"]
   },
   "compilerOptions": {
     "emitDeclarationOnly": true,
