--- a/packages/popper/package.json
+++ b/packages/popper/package.json
@@ -29,7 +29,7 @@
   },
   "dependencies": {
     "@react-native-aria/focus": "^0.2.7",
-    "react-native-svg": "^13.6.0",
+    "react-native-svg": "13.4.0",
     "@universa11y/utils": "*",
     "@universa11y/react-native-aria": "*"
   },
