--- a/floating-ui/tsconfig.json
+++ b/floating-ui/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["./src"],
+  "include": ["src"],
   "exclude": ["node_modules", "example"],
   "compilerOptions": {
     "emitDeclarationOnly": true,
