--- a/alert-dialog/package.json
+++ b/alert-dialog/package.json
@@ -24,24 +24,22 @@
     "react-native": "^0.70.3",
     "react-native-builder-bob": "^0.20.1",
     "react-native-web": "^0.18.1",
-    "tsconfig": "*",
-    "typescript": "^4.7.4"
+    "tsconfig": "7",
+    "typescript": "^4.9.4"
   },
   "dependencies": {
     "@react-native-aria/focus": "^0.2.7",
-    "@universa11y/hooks": "*",
-    "@universa11y/icon": "*",
-    "@universa11y/overlay": "*",
-    "@universa11y/react-native-aria": "*",
-    "@universa11y/transitions": "*",
-    "@universa11y/utils": "*",
+    "@universa11y/hooks": "latest",
+    "@universa11y/icon": "latest",
+    "@universa11y/overlay": "latest",
+    "@universa11y/react-native-aria": "latest",
+    "@universa11y/transitions": "latest",
+    "@universa11y/utils": "latest",
     "react-native-svg": "13.4.0"
   },
   "peerDependencies": {
-    "react": "*",
-    "react-dom": "*",
-    "react-native": "*",
-    "react-native-web": "*"
+    "react": ">=16",
+    "react-dom": ">=16"
   },
   "react-native-builder-bob": {
     "source": "src",
