--- a/example/storybook/package.json
+++ b/example/storybook/package.json
@@ -24,7 +24,7 @@
   "dependencies": {
     "@dank-style/color-mode": "^0.1.0",
     "@dank-style/css-injector": "^0.1.0",
-    "@dank-style/react": "0.1.53",
+    "@dank-style/react": "0.2.3",
     "@floating-ui/react": "^0.19.0",
     "@gluestack/design-system": "^0.1.56",
     "@gluestack/ui-compiled": "^0.1.0",
@@ -47,6 +47,8 @@
     "expo": "^47.0.0",
     "expo-linear-gradient": "~12.0.1",
     "expo-status-bar": "~1.4.2",
+    "lucide-react": "^0.115.0",
+    "lucide-react-native": "^0.115.0",
     "prism-react-renderer": "^1.3.5",
     "react": "^18.2.0",
     "react-native-safe-area-context": "^4.4.1",
